# Redefyning

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
Redefyning/: Cargo.toml
Redefyning-Core/: Cargo.toml
Redefyning-Core/src/core/: mod.rs
core/: Cargo.toml
core/src/: debug_vk.rs  lib.rs  utils.rs  vulkan.rs  window.rs  winit.rs
core/src/vk/: data.rs  debug_vk.rs  mod.rs  setup.rs  vulkan.rs
core/src/vk/implementations/: debug.rs  devices.rs  display.rs  mod.rs  start.rs
editor/: Cargo.toml
editor/src/: main.rs
redefyning_core/: Cargo.toml
redefyning_core/src/: lib.rs  utils.rs  vulkan.rs  window.rs
redefyning_editor/: Cargo.toml
redefyning_editor/src/: main.rs
src/: main.rs
src/core/rendering/open_gl/: base.rs  debug.rs  mod.rs
src/core/rendering/vulkan/: debug.rs  mod.rs  setup.rs
src/core/shaders/: default.slang
src/core/windowing/: base.rs  debug.rs  mod.rs
