[package]
name = "Redefyning"
version = "0.1.0"
edition = "2024"

[dependencies]
# Graphics APIs
ash = {version = "0.38.0", optional = true}
glium = {version = "0.36.0", optional = true}
# Windowing and event handling
winit = "0.30.12"
# Currently unused, waiting for Vulkan Renderer to be done.
egui = "0.32.0"


[features]
# TODO: Remove "debug" as a default after this is stable
default = ["vulkan", "debug"]
# Enables Debugging Internally, extremely slow but useful for development
debug = []
vulkan = ["dep:ash"]
open_gl = ["dep:glium"]
